--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <p class="intro-text">Ready to discuss your project? I'm available for new opportunities.</p>
 
             <!-- IMPORTANT: FORM UPDATED FOR NETLIFY -->
-            <form name="contact" method="POST" data-netlify="true" action="/thank-you/">
+            <form name="contact" method="POST" data-netlify="true" action="/thank-you">
                 <input type="hidden" name="form-name" value="contact" />
                 <div class="form-group">
                     <label for="name">Name:</label>
