--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <h1>Get in Touch</h1>
             <p class="intro-text">Ready to discuss your project? I'm available for new opportunities.</p>
 
-            <!-- FORM ACTION CHANGED TO DIRECTLY POINT TO THE FILE -->
-            <form name="contact" method="POST" data-netlify="true" action="/thank-you.html">
+            <!-- FORM UPDATED FOR NETLIFY'S DATA-NETLIFY-REDIRECT -->
+            <form name="contact" method="POST" data-netlify="true" data-netlify-redirect="/thank-you.html">
                 <input type="hidden" name="form-name" value="contact" />
                 <div class="form-group">
                     <label for="name">Name:</label>
