--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
             <h1>Get in Touch</h1>
             <p class="intro-text">Ready to discuss your project? I'm available for new opportunities.</p>
 
-            <!-- FORM UPDATED FOR NETLIFY'S DATA-NETLIFY-REDIRECT -->
-            <form name="contact" method="POST" data-netlify="true" data-netlify-redirect="/thank-you.html">
+            <!-- IMPORTANT: FORM UPDATED FOR NETLIFY -->
+            <form name="contact" method="POST" data-netlify="true" action="/thank-you/">
                 <input type="hidden" name="form-name" value="contact" />
                 <div class="form-group">
                     <label for="name">Name:</label>
@@ -86,6 +86,7 @@
                     <textarea id="message" name="message" rows="6" required></textarea>
                 </div>
                 <button type="submit" class="btn primary-btn">Send Message</button>
+                <!-- Removed form-note as it's no longer needed for Netlify Forms -->
             </form>
 
             <div class="direct-contact">
