--- a/thank-you.html
+++ b/thank-you.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You, MUIZ!</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css"> <!-- This is the line that matters -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <!-- FontAwesome for icons (needed if style.css uses it globally or for consistency) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Google Fonts link for Roboto (for consistency) -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +17,6 @@
                 <li><a href="index.html#specializations">My Expertise</a></li>
                 <li><a href="index.html#contact">Contact</a></li>
             </ul>
-            <!-- Burger menu not typically needed on a simple thank-you page -->
         </nav>
     </header>
 
@@ -40,6 +37,5 @@
             </div>
         </div>
     </footer>
-    <!-- No JavaScript needed for this simple page -->
 </body>
 </html>
