--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
 
             <div class="direct-contact">
                 <h2>Other Ways to Connect</h2>
-                <!-- NEW STRUCTURE FOR CONNECT LINKS -->
                 <div class="connect-links-grid">
                     <div class="connect-item">
                         <a href="mailto:muizbesar1@gmail.com" class="connect-logo-link">
@@ -112,10 +111,14 @@
 
     <footer>
         <div class="container">
-            <p>© 2023 Muiz. All rights reserved.</p>
-            <div class="social-links">
-                <a href="https://github.com/ambulung" target="_blank">GitHub</a>
-                <a href="https://ambulung.itch.io/" target="_blank">Itch.io</a>
+            <!-- Removed: <p>© 2023 Muiz. All rights reserved.</p> -->
+            <div class="social-links footer-icon-links"> <!-- Added new class for specific footer icon styling -->
+                <a href="https://github.com/ambulung" target="_blank" aria-label="GitHub Profile">
+                    <img src="images/github-logo.png" alt="GitHub Icon">
+                </a>
+                <a href="https://ambulung.itch.io/" target="_blank" aria-label="Itch.io Profile">
+                    <img src="images/itchio-logo.png" alt="Itch.io Icon">
+                </a>
             </div>
         </div>
     </footer>
