--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-2">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUIZ – Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
@@ -111,8 +111,10 @@
 
     <footer>
         <div class="container">
-            <!-- Removed: <p>© 2023 Muiz. All rights reserved.</p> -->
-            <div class="social-links footer-icon-links"> <!-- Added new class for specific footer icon styling -->
+            <div class="social-links footer-icon-links">
+                <a href="mailto:muizbesar1@gmail.com" aria-label="Send Email">
+                    <img src="images/email-logo.png" alt="Email Icon">
+                </a>
                 <a href="https://github.com/ambulung" target="_blank" aria-label="GitHub Profile">
                     <img src="images/github-logo.png" alt="GitHub Icon">
                 </a>
