Changes to index.html

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <div class="banner-card" data-modal-target="pythonModal">
                     <img src="images/python.webp" alt="Python Development">
                     <h3>Python Development</h3>
-                    <p>Scripting, data handling & problem solving.</p>
+                    <p>Scripting & problem solving.</p>
                     <div class="click-indicator"><i class="fas fa-arrow-right"></i></div>
                 </div>
             </div>
