--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-2">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MUIZ – Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
@@ -55,7 +55,7 @@
                 <div class="banner-card" data-modal-target="pythonModal">
                     <img src="images/python.webp" alt="Python Development">
                     <h3>Python Development</h3>
-                    <p>Scripting & problem solving.</p>
+                    <p>Scripting, data handling & problem solving.</p>
                     <div class="click-indicator"><i class="fas fa-arrow-right"></i></div>
                 </div>
             </div>
@@ -111,6 +111,7 @@
 
     <footer>
         <div class="container">
+            <!-- REMOVED COPYRIGHT TEXT HERE -->
             <div class="social-links footer-icon-links">
                 <a href="mailto:muizbesar1@gmail.com" aria-label="Send Email">
                     <img src="images/email-logo.png" alt="Email Icon">
@@ -178,7 +179,7 @@
                 <p>Live Website Examples:</p>
                 <ul>
                     <li><a href="https://streamcorner.netlify.app/" target="_blank">https://streamcorner.netlify.app/</a></li>
-                    <li><a href="https://clairoclonewebsite.netlify.app/" target="_blank">https://clairoclonewebsite.netlify.app/</a></li>
+                    <li><a href="https://clairoclonewebsite.netlify.app/" target="_blank">https://clairoclonew网站.netlify.app/</a></li>
                     <li><a href="https://gamecalendar.netlify.app/" target="_blank">https://gamecalendar.netlify.app/</a>
                         <span class="warning-text">(<i class="fas fa-exclamation-triangle"></i> Warning: Content from API may include NSFW material)</span>
                     </li>
