Add Resume download

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="6" required></textarea>
                 </div>
-                <button type="submit" class="btn primary-btn">Send Message</button>
+                
+                <button type="submit" class="btn secondary-btn">Send Message</button>
+                <a href="resume/MUIZ-BESAR-Resume.pdf" class="btn secondary-btn" download>Download Resume</a>
             </form>
 
             <div class="direct-contact">
@@ -111,7 +113,6 @@
 
     <footer>
         <div class="container">
-            <!-- REMOVED COPYRIGHT TEXT HERE -->
             <div class="social-links footer-icon-links">
                 <a href="mailto:muizbesar1@gmail.com" aria-label="Send Email">
                     <img src="images/email-logo.png" alt="Email Icon">
@@ -179,7 +180,7 @@
                 <p>Live Website Examples:</p>
                 <ul>
                     <li><a href="https://streamcorner.netlify.app/" target="_blank">https://streamcorner.netlify.app/</a></li>
-                    <li><a href="https://clairoclonewebsite.netlify.app/" target="_blank">https://clairoclonew网站.netlify.app/</a></li>
+                    <li><a href="https://clairoclonewebsite.netlify.app/" target="_blank">https://clairoclonewbsite.netlify.app/</a></li>
                     <li><a href="https://gamecalendar.netlify.app/" target="_blank">https://gamecalendar.netlify.app/</a>
                         <span class="warning-text">(<i class="fas fa-exclamation-triangle"></i> Warning: Content from API may include NSFW material)</span>
                     </li>
@@ -206,6 +207,7 @@
                 <h3>Oil & Gas (1 Year - Inspections)</h3>
                 <p>Focused on critical infrastructure inspection. Performed thermal and visual surveys of pipelines and facilities to detect leaks and structural issues, enhancing safety and efficiency.</p>
                 <h4>Key Tasks:</h4>
+                    <ul>
                     <li>Thermal & visual leak detection.</li>
                     <li>Precise flight maneuvers for close inspection.</li>
                     <li>Strict adherence to safety protocols.</li>
