--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <!-- Contact Section -->
         <section id="contact" class="container">
             <h1>Get in Touch</h1>
+            <p class="intro-text">Ready to discuss your project? I'm available for new opportunities.</p>
+
             <form name="contact" method="POST" data-netlify="true">
                 <input type="hidden" name="form-name" value="contact" />
                 <div class="form-group">
@@ -91,6 +93,7 @@
                             <img src="images/email-logo.png" alt="Email Logo" class="connect-logo">
                         </a>
                         <p class="connect-text">Email</p>
+                        <p class="connect-subtext">muizbesar1@gmail.com</p>
                     </div>
                     <div class="connect-item">
                         <a href="https://github.com/ambulung" target="_blank" class="connect-logo-link">
