Fix website links

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
                 <ul>
                     <li><a href="https://streamcorner.netlify.app/" target="_blank">https://streamcorner.netlify.app/</a></li>
                     <li><a href="https://clairoclonewebsite.netlify.app/" target="_blank">https://clairoclonewbsite.netlify.app/</a></li>
-                    <li><a href="https://digimon-search.netlify.app/" target="_blank">https://clairoclonewbsite.netlify.app/</a></li>
-                    <li><a href="https://gamecalendar.netlify.app/" target="_blank">https://digimon-search.netlify.app/</a>
+                    <li><a href="https://digimon-search.netlify.app/" target="_blank">https://digimon-search.netlify.app/</a></li>
+                    <li><a href="https://gamecalendar.netlify.app/" target="_blank">https://gamecalendar.netlify.app/</a>
                         <span class="warning-text">(<i class="fas fa-exclamation-triangle"></i> Warning: Content from API may include NSFW material)</span>
                     </li>
                 </ul>
